# proteomics-meta

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/proteomics_meta/: __init__.py  app.py  app_launcher.py  capabilities.py  chatbot.py  cli.py  config.py  db.py  engine.py  entropy.py  external.py  networks.py  stats.py
tests/: test_chatbot.py  test_config.py  test_networks_and_db.py  test_stats.py
